--- a/app/src/main/res/drawable/bg_green.xml
+++ b/app/src/main/res/drawable/bg_green.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <corners android:radius="20dp"/>
-    <stroke android:color="@color/fiolet"/>
-    <solid android:color="@color/fiolet"/>
+    <stroke android:color="@color/green"/>
+    <solid android:color="@color/green"/>
 </shape>
