--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -4,41 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.support.robigroup.tradebook.tovar_list.CheckActivity">
-
+    tools:context="com.support.robigroup.tradebook.tovar_list.ChequeActivity">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:scrollbars="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_tovar">
 
     </android.support.v7.widget.RecyclerView>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_height="48dp"
+        android:layout_margin="16dp"
+        android:onClick="payAmount"
+        app:cardBackgroundColor="@color/green"
+        app:cardCornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="8dp" >
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="447dp">
 
         <ImageButton
             android:id="@+id/imageButton3"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_gravity="right|center_horizontal"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:layout_gravity="right|center_vertical"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/ic_right_white" />
 
         <TextView
             android:id="@+id/textView20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="TextView" />
+            android:text="@string/go_to_pay"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:textStyle="bold" />
     </android.support.v7.widget.CardView>
 
     <TextView
