--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,44 +16,53 @@
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.CardView
+                android:layout_margin="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
+                android:onClick="onClickNewSale"
+                app:cardElevation="@dimen/card_elevation"
                 app:cardBackgroundColor="@color/main_blue"
-                app:cardCornerRadius="5dp"
-                android:onClick="onClickNewSale">
+                app:cardCornerRadius="@dimen/card_corner">
 
                 <ImageView
                     android:id="@+id/imageView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right|center_horizontal"
-                    app:srcCompat="@mipmap/ic_launcher_round" />
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_margin="10dp"
+                    app:srcCompat="@drawable/ic_right_white" />
 
                 <ImageView
                     android:id="@+id/imageView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left|center_horizontal"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_margin="10dp"
+                    app:srcCompat="@drawable/ic_new_sale_white" />
 
                 <TextView
                     android:id="@+id/textView19"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Новая продажа"
                     android:textColor="@android:color/white" />
             </android.support.v7.widget.CardView>
             <android.support.v7.widget.CardView
+                android:layout_margin="10dp"
+                app:cardElevation="@dimen/card_elevation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="5dp">
+                app:cardCornerRadius="@dimen/card_corner">
                 <include layout="@layout/item_today"/>
             </android.support.v7.widget.CardView>
             <android.support.v7.widget.CardView
+                android:layout_margin="10dp"
+                app:cardElevation="@dimen/card_elevation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="5dp">
+                app:cardCornerRadius="@dimen/card_corner">
                 <include layout="@layout/item_dynamic_sales"/>
             </android.support.v7.widget.CardView>
         </LinearLayout>
