--- a/app/src/main/res/layout/item_today.xml
+++ b/app/src/main/res/layout/item_today.xml
@@ -9,10 +9,10 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="2dp"
+        android:layout_width="1dp"
         android:layout_height="80dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/line_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -20,9 +20,9 @@
     <TextView
         android:id="@+id/textView11"
         android:layout_width="0dp"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:layout_marginTop="16dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/line_grey"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -47,7 +47,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/ic_chevron_left_black_48px" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -59,14 +59,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView3"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/ic_calendar" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="0dp"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:layout_marginTop="8dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/line_grey"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -91,9 +91,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/bg_fiolet"
+        android:background="@drawable/bg_yellow_corner"
         android:gravity="center"
         android:text="49"
+        android:textColor="@color/yellow"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +106,7 @@
         android:layout_height="100dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/bg_fiolet"
+        android:background="@drawable/bg_green"
         android:gravity="center"
         android:text="10 360T"
         app:layout_constraintEnd_toEndOf="parent"
