--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="main_blue">#1a237e</color>
     <color name="back_grey">#f5f5f5</color>
+    <color name="line_grey">#7b7b7b</color>
     <color name="green">#43a047</color>
     <color name="light_blue">#093a74</color>
     <color name="fiolet">#6032b8</color>
