--- a/app/src/main/res/layout/activity_payment_result.xml
+++ b/app/src/main/res/layout/activity_payment_result.xml
@@ -6,10 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.support.robigroup.tradebook.payment.PaymentResult"
     android:background="@color/back_grey">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
     <Button
-        android:id="@+id/button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -39,13 +44,13 @@
     <TextView
         android:id="@+id/textView31"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="22dp"
         android:layout_marginTop="8dp"
         android:onClick="closePayment"
         android:text="@string/text_payment_closed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <TextView
         android:id="@+id/textView32"
@@ -71,7 +76,6 @@
         app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
     <ImageView
-        android:id="@+id/imageView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
