--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -79,6 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
     <TextView
+        android:id="@+id/skidka"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -98,6 +99,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
     <TextView
+        android:id="@+id/res"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -107,6 +109,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView27" />
 
     <TextView
+        android:id="@+id/itog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
