--- a/app/src/main/res/layout/activity_payment_result.xml
+++ b/app/src/main/res/layout/activity_payment_result.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView31" />
 
     <TextView
-        android:id="@+id/textView35"
+        android:id="@+id/price_sdacha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -81,6 +81,6 @@
         android:layout_marginTop="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView35"
+        app:layout_constraintTop_toBottomOf="@+id/price_sdacha"
         app:srcCompat="@drawable/ic_done" />
 </android.support.constraint.ConstraintLayout>
