--- a/app/src/main/res/layout/item_tovar.xml
+++ b/app/src/main/res/layout/item_tovar.xml
@@ -62,12 +62,14 @@
             app:layout_constraintVertical_bias="0.85">
 
             <ImageButton
+                android:id="@+id/imb_minus"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/ic_minus" />
 
             <TextView
+                android:id="@+id/count_text"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -75,6 +77,7 @@
                 android:text="1" />
 
             <ImageButton
+                android:id="@+id/imb_plus"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
